[*]: fixed create event response
