# docs/openapi.yaml
@@ -83,6 +83,13 @@ paths:
                     type: string
                 required:
                   - id
+        '401':
+          description: Access is unauthorized.
+          headers:
+            Set-Cookie:
+              required: true
+              schema:
+                type: string
         default:
           description: An unexpected error response.
           headers:
